Creating asnaf
